--- a/_site.yml
+++ b/_site.yml
@@ -5,8 +5,8 @@ description: |
 output_dir: "docs"
 navbar:
   right:
-    - text: "Monkey"
+    - text: "Home"
       href: index.html
-    - text: "Panda"
+    - text: "About"
       href: about.html
 output: distill::distill_article
