--- a/_site.yml
+++ b/_site.yml
@@ -4,9 +4,11 @@ description: |
   My Website
 output_dir: "docs"
 navbar:
-  right:
+  left:
     - text: "Home"
       href: index.html
     - text: "About"
       href: about.html
+    - text: "CV"
+      href: CV.html
 output: distill::distill_article
