changed font and added different pic

--- a/_site.yml
+++ b/_site.yml
@@ -11,4 +11,7 @@ navbar:
       href: about.html
     - text: "CV"
       href: CV.html
+    - text: "Blog Roll"
+      href: blog.html
 output: distill::distill_article
+theme: theme.css
