--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "petermenzies.github.io"
-title: "My Website"
+title: "Peter Menzies"
 description: |
   My Website
 output_dir: "docs"
@@ -11,7 +11,7 @@ navbar:
       href: bio.html
     - text: "CV"
       href: CV.html
-    - text: "Blog Roll"
+    - text: "Blog"
       href: blog.html
 output: distill::distill_article
 theme: theme.css
