--- a/_site.yml
+++ b/_site.yml
@@ -3,6 +3,7 @@ title: "Peter Menzies"
 description: |
   My Website
 output_dir: "docs"
+base_url: https://petermenzies.github.io/
 navbar:
   left:
     - text: "Home"
@@ -13,5 +14,6 @@ navbar:
       href: CV.html
     - text: "Blog"
       href: blog.html
+  source_url: https://github.com/petermenzies/petermenzies.github.io
 output: distill::distill_article
 theme: theme.css
