--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,8 @@ navbar:
       href: CV.html
     - text: "Blog"
       href: blog.html
+    - text: "Publications"
+      href: publications.html
   source_url: https://github.com/petermenzies/petermenzies.github.io
 output: distill::distill_article
 theme: theme.css
