--- a/_site.yml
+++ b/_site.yml
@@ -16,6 +16,8 @@ navbar:
       href: blog.html
     - text: "Publications"
       href: publications.html
+    - text: "Climbing"
+      href: climbing.html
   source_url: https://github.com/petermenzies/petermenzies.github.io
 output: distill::distill_article
 theme: theme.css
