--- a/_site.yml
+++ b/_site.yml
@@ -11,7 +11,7 @@ navbar:
     - text: "Bio"
       href: bio.html
     - text: "Resume"
-      href: "Menzies_resume_7-2-22.pdf"
+      href: "Menzies_Resume_7-22-22.pdf"
     - text: "Blog"
       href: blog.html
     - text: "Publications"
